--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "smile",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "type": "module",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -27,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./server/server.js"
+    "server": "nodemon ./server/index.js"
   },
   "eslintConfig": {
     "extends": [
