--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smile",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http:///localhost:5000",
   "main": "index.js",
   "type": "module",
   "dependencies": {
@@ -19,9 +20,12 @@
     "react": "^17.0.1",
     "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
