--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "proxy": "http://0.0.0.0:8000",
   "type": "module",
   "dependencies": {
+    "@auth0/auth0-react": "^1.3.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -27,7 +29,8 @@
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
